# hyperedit-gui

./: README.md  pyproject.toml
data/: test.srt
hyperedit_gui/: __init__.py  config.py  controller.py  main.py  projects.py  recent_projects.py
hyperedit_gui/exception/: exceptions.py
hyperedit_gui/model/: config.py  recent_projects.py  srt.py
hyperedit_gui/view/: main_window.py  project_window.py  srt_window.py  tracks_window.py
scripts/: hyperedit_gui.py
tests/: test_projects.py
