[tool.poetry]
name = "hyperedit-gui"
version = "1.0.0"
description = ""
authors = ["Jake Stanley <prudentia713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
hyperedit = { git = "https://github.com/jakestanley/hyperedit.git", branch = "develop" }
common-py = { git = "https://github.com/jakestanley/common-py.git", branch = "main" }
python = ">=3.9,<3.13"
pyqt6 = "^6.7.0"
appdirs = "^1.4.4"
pyside6 = "^6.7.1"
python-vlc = "^3.0.20123"

[tool.poetry.scripts]
hyperedit = "scripts.hyperedit_gui:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ffmpeg = "^1.4"
ffprobe-python = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
